@@ -21,7 +21,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -83,29 +86,30 @@ public class FeedService {
         hashTagRepository.saveAll(hashTags);
         savedFeed.getHashTags().addAll(hashTags);
 
-        // 6. FeedRes 반환
+        // 6. FeedRes 반환 (상대 시간 추가)
         return FeedRes.builder()
+                .feedId(savedFeed.getId())
                 .contents(savedFeed.getContent())
-                .profileName(savedFeed.getProfile().getProfileNickname()) // Profile 엔티티에 이름 필드가 있다고 가정
+                .profileName(savedFeed.getProfile().getProfileNickname())
                 .profileId(savedFeed.getProfile().getId())
                 .profileImageUrl(savedFeed.getProfile().getProfileImageUrl())
                 .hashTag(savedFeed.getHashTags().stream()
                         .map(HashTag::getHashTag)
-                        .toList()) // 저장된 HashTag 리스트
-                // url도 반환해야 함
+                        .toList())
                 .feedFiles(savedFeed.getFeedFiles().stream()
                         .map(FeedFile::getFileUrl)
                         .toList())
                 .likeCount(savedFeed.getLikeCount())
                 .commentCount(savedFeed.getCommentList().size())
-                .isLiked(false) // 기본값 설정
-                // 공연 정보
+                .isLiked(false)
+                .relativeTime(getRelativeTime(savedFeed.getCreatedTime())) // 상대 시간 추가
                 .performId(perform.getMt20id())
                 .performName(perform.getPrfnm())
                 .startDate(perform.getPrfpdfrom())
-                .endDate(perform.getGenrenm())
-                .genreName(perform.getPrfstate())
-                .performState(perform.getFcltynm())
+                .endDate(perform.getPrfpdto())
+                .genreName(perform.getGenrenm())
+                .performState(perform.getPrfstate())
+                .placeName(perform.getFcltynm())
                 .openRun(perform.getOpenrun())
                 .area(perform.getArea())
                 .poster(perform.getPoster())
@@ -132,8 +136,9 @@ public class FeedService {
         // 3. 피드 수정
         feed.update(feedReq.getContent(), feedReq.getTopic(), feedReq.getFileUrls(), feedReq.getHashTags());
 
-        // 4. 응답 반환
+        // FeedRes 반환 (상대 시간 추가)
         return FeedRes.builder()
+                .feedId(feed.getId())
                 .contents(feed.getContent())
                 .profileName(feed.getProfile().getProfileNickname())
                 .profileId(feed.getProfile().getId())
@@ -147,12 +152,14 @@ public class FeedService {
                 .likeCount(feed.getLikeCount())
                 .commentCount(feed.getCommentList().size())
                 .isLiked(false)
+                .relativeTime(getRelativeTime(feed.getCreatedTime())) // 상대 시간 추가
                 .performId(perform.getMt20id())
                 .performName(perform.getPrfnm())
                 .startDate(perform.getPrfpdfrom())
-                .endDate(perform.getGenrenm())
-                .genreName(perform.getPrfstate())
-                .performState(perform.getFcltynm())
+                .endDate(perform.getPrfpdto())
+                .genreName(perform.getGenrenm())
+                .performState(perform.getPrfstate())
+                .placeName(perform.getFcltynm())
                 .openRun(perform.getOpenrun())
                 .area(perform.getArea())
                 .poster(perform.getPoster())
@@ -174,31 +181,75 @@ public class FeedService {
         feedRepository.delete(feed);
     }
 
-/*    public List<FeedRes> getFeedsByLatest() {
-        List<Feed> feeds = feedRepository.findAllByOrderByWriteDateDesc();
-
-        return feeds.stream()
-                .map(feed -> FeedRes.builder()
-                        .contents(feed.getContent())
-                        .profileName(feed.getProfile().getProfileNickname())
-//                        .hashTag(feed.getHashTags())
-                        .likeCount(feed.getLikeCount())
-                        .isLiked(false)
-                        .build())
-                .toList();
+    // 최신순 조회
+    public List<FeedRes> getFeedsByLatest(Long userId) {
+        List<Feed> feeds = feedRepository.findAllByOrderByCreatedTimeDesc();
+        if (feeds.isEmpty()) {
+            throw new FeedException(FeedErrorCode.FEED_LIST_EMPTY); // 피드가 없을 경우 예외 발생
+        }
+        return convertToFeedResList(feeds);
     }
 
-    public List<FeedRes> getFeedsByLikeCount() {
+    // 좋아요 순 조회
+    public List<FeedRes> getFeedsByLikes(Long userId) {
         List<Feed> feeds = feedRepository.findAllByOrderByLikeCountDesc();
+        if (feeds.isEmpty()) {
+            throw new FeedException(FeedErrorCode.FEED_LIST_EMPTY); // 피드가 없을 경우 예외 발생
+        }
+        return convertToFeedResList(feeds);
+    }
 
+    // Feed 엔티티를 FeedRes DTO로 변환
+    private List<FeedRes> convertToFeedResList(List<Feed> feeds) {
         return feeds.stream()
                 .map(feed -> FeedRes.builder()
+                        .feedId(feed.getId())
                         .contents(feed.getContent())
                         .profileName(feed.getProfile().getProfileNickname())
-//                        .hashTag(feed.getHashTags())
+                        .profileId(feed.getProfile().getId())
+                        .profileImageUrl(feed.getProfile().getProfileImageUrl())
+                        .hashTag(feed.getHashTags().stream()
+                                .map(HashTag::getHashTag)
+                                .collect(Collectors.toList()))
+                        .feedFiles(feed.getFeedFiles().stream()
+                                .map(FeedFile::getFileUrl)
+                                .collect(Collectors.toList()))
                         .likeCount(feed.getLikeCount())
-                        .isLiked(false)
+                        .commentCount(feed.getCommentList().size())
+                        .isLiked(false) // 기본값 설정
+                        .relativeTime(getRelativeTime(feed.getCreatedTime())) // 상대 시간 추가
+                        // 공연 정보 추가
+                        .performId(feed.getPerform() != null ? feed.getPerform().getMt20id() : null)
+                        .performName(feed.getPerform() != null ? feed.getPerform().getPrfnm() : null)
+                        .startDate(feed.getPerform() != null ? feed.getPerform().getPrfpdfrom() : null)
+                        .endDate(feed.getPerform() != null ? feed.getPerform().getPrfpdto() : null)
+                        .genreName(feed.getPerform() != null ? feed.getPerform().getGenrenm() : null)
+                        .performState(feed.getPerform() != null ? feed.getPerform().getPrfstate() : null)
+                        .placeName(feed.getPerform() != null ? feed.getPerform().getFcltynm() : null)
+                        .openRun(feed.getPerform() != null ? feed.getPerform().getOpenrun() : null)
+                        .area(feed.getPerform() != null ? feed.getPerform().getArea() : null)
+                        .poster(feed.getPerform() != null ? feed.getPerform().getPoster() : null)
+                        .performLikeCount(feed.getPerform() != null ? feed.getPerform().getLikeCount() : null)
                         .build())
-                .toList();
-    }*/
+                .collect(Collectors.toList());
+    }
+
+    // 상대 시간 계산
+    private String getRelativeTime(LocalDateTime createdTime) {
+        Duration duration = Duration.between(createdTime, LocalDateTime.now());
+        long seconds = duration.getSeconds();
+        long minutes = seconds / 60;
+        long hours = minutes / 60;
+        long days = hours / 24;
+
+        if (seconds < 60) {
+            return seconds + "초 전";
+        } else if (minutes < 60) {
+            return minutes + "분 전";
+        } else if (hours < 24) {
+            return hours + "시간 전";
+        } else {
+            return days + "일 전";
+        }
+    }
 }
